--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,7 +13,8 @@
     "lib": [
       "esnext",
       "dom"
-    ]
+    ],
+    "types": ["element-plus/global"]
   },
   "include": [
     "src/**/*.ts",
