--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.0.9",
+    "@element-plus/icons": "^0.0.11",
     "element-plus": "^2.2.17",
     "vue": "^3.2.25"
   },
